Fixed layout problems on mobile devices caused by sidebar fix

--- a/assets/default/sass/style.scss
+++ b/assets/default/sass/style.scss
@@ -815,7 +815,7 @@
 
     .sidebar li a { padding: 7px; }
 
-    .main-area { margin-left: 0; }
+    .main-area { margin-left: 0; float: left; }
 
     .navbar-nav { margin: 7px 0; }
 
